--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -20,7 +20,10 @@
         };
     }
     @if $breakpoint == menu {
-        @media only screen and (min-width: 56.25em){@content};}
+        @media only screen and (min-width: 56.25em){
+            @content
+        };
+    }
         
     @if $breakpoint == br5 {
         @media only screen and (max-width: 37.5em){//600px
