Changed theme and did some code structuring

--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -6,19 +6,18 @@
     padding: .5rem 5rem;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid rgb(212, 212, 212);
+    // border-bottom: 1px solid rgb(212, 212, 212);
+    -webkit-box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
+    box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
     background-color: #fff;
-    
-    @include respond(br4){
-        flex-wrap: wrap;
-    }
+
     @include respond(br5){
         padding: .5rem 1.5rem;
     }
 
     //LOGO
     &__logo {
-        padding-right: 4rem;
         height: 6rem;
         margin-right: auto;
 
@@ -29,33 +28,35 @@
 
     //MENU
     &__menu {
-        display: block;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
         list-style: none;
+        color: $color-grey;
 
-        @include respond(menu) {
-            display: block;
+        @include respond(menuMin) {
+            display: flex;
         }
 
-        @include respond(br4){
+        @include respond(menuMax){
             display:none;
+            flex-direction: column;
+            align-items: flex-end;
 
-            margin-top: 1rem;
-            flex: 1 0 100%;
+            position: absolute;
+            top: 100%;
+            left: 0;
             background-color: #fff;
-            border-top: .7rem solid #000;
-            color: #000;
+            width: 100%;
+            -webkit-box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
+            -moz-box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
+            box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
         }
     }
 
     &__item {
-        display: inline-block;
-        position: relative;
-
-        @include respond(br4){
-            display: block;
-            &:not(:last-child) > *{
-                border-bottom: 1px solid #000;
-            }
+        @include respond(menuMax){
+            display: block !important;
         }
 
         &:not(:last-child) {
@@ -77,34 +78,83 @@
         text-decoration: none;
         text-transform: uppercase;
         letter-spacing: 2px;
-        font-weight: bold;
-        position: relative;
+        font-size: 1.4rem;
 
-        @include respond(br4){
-            padding: 1.5rem 2rem;
+        @include respond(menuMax){
+            padding: 1.5rem 5rem;
+            text-align: right;
+        }
+
+        &:not(&--btn):hover {
+            color: $color-grey-dark;
+        }
+
+        &--btn {
+            background-image: linear-gradient(to right, #455aa4, #ed7d26);
+            border-radius: 10rem;
+            padding: 1rem 2.4rem;
+            color: #fff;
+            font-weight: bold;
+            transition: all .2s;
+
+            @include respond(menuMax){
+                display: inline-block;
+                padding: 1.5rem 5rem;
+                backface-visibility: hidden;
+                background-clip: text;
+                -webkit-background-clip: text;
+                color: transparent;
+            }
+    
+            @include respond(br5){
+                padding: 1.5rem;
+            }
+
+            @include respond(menuMin){
+                &:hover {
+                    transform: translateY(-0.2rem);
+                    -webkit-box-shadow: 0px .5rem 1rem 0px rgba(0,0,0,0.2);
+                    -moz-box-shadow: 0px .5rem 1rem 0px rgba(0,0,0,0.2);
+                    box-shadow: 0px .5rem 1rem 0px rgba(0,0,0,0.2);
+                }
+            }
         }
     }
 
     //BUTTON
     &__button {
         display: none;
-        color: $color-tertiary;
+        color: $color-grey;
         cursor: pointer;
 
-        @include respond(br4) {
+        &:hover {
+            color: $color-grey-dark;
+        }
+
+        &.active {
+            color: $color-tertiary;
+        }
+
+        @include respond(menuMax) {
             display: block;
         }
     }
 
+
+    // Event when clicking button
+    &__button.active ~ &__menu {
+        display: flex;
+    }
+
     &__burger {
-        width: 4.2rem;
+        width: 3.5rem;
         height: .4rem;
         background-color: currentColor;
         transition: all .3s;
         transform-origin: left;
 
         &:not(:last-child) {
-            margin-bottom: 1rem;
+            margin-bottom: .75rem;
         }
     }
 }
