--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,7 @@
 @import 'base/typography';
 
 @import 'components/nav';
+@import 'components/search';
 
 @import 'layout/grid';
 @import 'layout/header';
