--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -47,6 +47,10 @@
             top: 100%;
             left: 0;
             background-color: #fff;
+            background-image: url(../img/circuits1.png);
+            background-size: 100%;
+            background-position: left;
+            background-repeat: no-repeat;
             width: 100%;
             -webkit-box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
             -moz-box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
