Created header for homepage

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,6 +5,7 @@
 }
 
 html {
+    // Take care with these values
     font-size: 62.5%;
 
     @include respond(br1){
@@ -21,6 +22,12 @@ body {
     box-sizing: border-box;
     font-size: 1.6rem;
     font-family: 'Nunito Sans', sans-serif;
+
+    padding-top: 7rem;
+
+    @include respond(br1) {
+        padding-top: 6rem;
+    }
 }
 
 // ::selection {
@@ -31,4 +38,8 @@ body {
 img.responsive {
     width: 100%;
     height: auto;
+}
+
+.u-vpadding {
+    padding: 10rem 0;
 }
