--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -1,18 +1,15 @@
 .row {
     max-width: 140rem;
     margin: 0 auto;
-    padding: 0 3rem;
+    padding: 0 5rem;
     
     @include respond(br5){
-        padding: 0 1rem;
-    }
-    @include respond(br5){
-        padding: 0 .5rem;
+        padding: 0 1.5rem;
     }
 }
 .grid {
     display: grid;
-    grid-template-columns: repeat(12,1fr);
+    grid-template-columns: repeat(12, 1fr);
     grid-template-rows: auto;
 
     grid-row-gap: 5rem;
