--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,10 +1,17 @@
 .header {
     width: 100%;
-    height: 100vh;
-    // background-size: cover;
-    // background-repeat: no-repeat;
-    // background-position: center;
-    // background-image: 
-    //     linear-gradient(to bottom left, rgba($color-primary, .8), rgba($color-tertiary, .8)),
-    //     url('../img/curves1.png');
+
+    padding: 10rem 0;
+    min-height: 62.5rem;
+
+    &__img {
+        width: 100%;
+        height: auto;
+
+        @include respond(br4) {
+            width: 50%;
+            min-width: 30rem;
+            margin: 0 auto;
+        }
+    }
 }
