--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 
 @import 'components/nav';
 @import 'components/search';
+@import 'components/grid-item';
 
 @import 'layout/grid';
 @import 'layout/header';
