--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -3,7 +3,8 @@ $color-secondary: rgb(123, 188, 232);
 $color-tertiary: rgb(237, 125, 38);
 $color-grey: rgb(90, 90, 90);
 $color-grey-dark: rgb(60, 60, 60);
-$color-grey-light: rgb(200, 200, 200);
+$color-grey-light-1: rgb(250, 250, 250);
+$color-grey-light-2: rgb(240, 240, 240);
 
 $font-1: 'Nunito Sans', sans-serif;
 
