--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -6,6 +6,10 @@
     line-height: 1.2;
     padding-bottom: 1rem;
 
+    &--main {
+        color: $color-grey-dark;
+    }
+
     @include respond(br2) {
         letter-spacing: .2rem;
         font-size: 8rem;
