--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,8 +1,11 @@
 .header {
     width: 100%;
-
     padding: 10rem 0;
-    min-height: 62.5rem;
+    
+    // v-padding but should be local
+    @include respond(br4) {
+        padding: 5rem 0;
+    }
 
     &__img {
         width: 100%;
