--- a/src/sass/components/_grid-item.scss
+++ b/src/sass/components/_grid-item.scss
@@ -7,9 +7,20 @@
         width: 8rem;
         height: 8rem;
         border-radius: 50%;
-        background-color: $color-primary;
         justify-self: center;
         z-index: 20;
+
+        &--1 {
+            background-color: $color-primary;
+        }
+
+        &--2 {
+            background-color: $color-secondary;
+        }
+
+        &--3 {
+            background-color: $color-tertiary;
+        }
     }
 
     &__text {
