--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -3,6 +3,10 @@
     margin: 0 auto;
     padding: 0 5rem;
     
+    &:not(:last-of-type) {
+        margin-bottom: 2rem;
+    }
+
     @include respond(br5){
         padding: 0 1.5rem;
     }
