--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -3,6 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 9999;
     padding: .5rem 5rem;
     display: flex;
     align-items: center;
