--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -104,8 +104,21 @@ img.responsive {
   text-transform: uppercase;
   letter-spacing: .2rem;
   line-height: 1.2;
-  padding-bottom: 2rem;
-  color: #3c3c3c; }
+  padding-bottom: 2rem; }
+  .heading-secondary--grey-dark {
+    color: #3c3c3c; }
+
+.heading-tertiary {
+  font-size: 1.8rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  line-height: 1.2;
+  padding-bottom: 1rem; }
+  .heading-tertiary--grey-dark {
+    color: #3c3c3c; }
+  .heading-tertiary--grey-dark {
+    color: #3c3c3c; }
 
 .paragraph {
   font-size: 1.8rem;
@@ -116,6 +129,7 @@ img.responsive {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 9999;
   padding: .5rem 5rem;
   display: flex;
   align-items: center;
@@ -293,12 +307,68 @@ img.responsive {
     box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.1);
     z-index: 10; }
 
+.timeline {
+  width: 90rem;
+  margin: 0 auto;
+  padding: 0 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch; }
+  @media only screen and (max-width: 56.25em) {
+    .timeline {
+      width: 100%; } }
+  @media only screen and (max-width: 37.5em) {
+    .timeline {
+      padding: 0 1.5rem; } }
+  .timeline--color-white {
+    color: #fff; }
+  .timeline--color-white .timeline__heading {
+    background-color: #fff; }
+  .timeline--graphic-dark-grey .timeline__item::before {
+    border-color: #3c3c3c; }
+  .timeline--graphic-dark-grey .timeline__item::after {
+    background-color: #3c3c3c; }
+  .timeline__item {
+    display: grid;
+    grid-gap: 3rem;
+    grid-template-columns: 3rem auto;
+    grid-template-rows: auto auto 0;
+    align-items: center; }
+    .timeline__item::before {
+      content: "";
+      grid-area: 1 / 1 / 2 / 2;
+      width: calc(100% - 1.5rem);
+      height: 0;
+      padding-bottom: calc(100% - 1.5rem);
+      border-radius: 50%;
+      border: .75rem solid; }
+    .timeline__item::after {
+      content: "";
+      grid-area: 2 / 1 / 3 / 2;
+      justify-self: center;
+      width: 1rem;
+      height: 100%; }
+  .timeline__box {
+    display: flex;
+    flex-direction: column; }
+    .timeline__box:not(:last-child) {
+      margin-bottom: 1.5rem; }
+  .timeline__heading {
+    padding: .5rem;
+    justify-self: start;
+    font-size: 2.5rem;
+    font-weight: 300;
+    letter-spacing: .2rem;
+    text-transform: uppercase;
+    line-height: 1;
+    color: #3c3c3c; }
+
 .row {
   max-width: 140rem;
   margin: 0 auto;
   padding: 0 5rem; }
   .row:not(:last-of-type) {
-    margin-bottom: 2rem; }
+    margin-bottom: 5rem; }
   @media only screen and (max-width: 37.5em) {
     .row {
       padding: 0 1.5rem; } }
