Updated typography with headings, restructuring and responsive ajustments

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -8,6 +8,18 @@
 
     &--main {
         color: $color-grey-dark;
+
+        & span {
+            &::before {
+                color:  $color-tertiary;
+                text-transform: none;
+                content: "${\`";
+            }
+            &::after {
+                color: $color-tertiary;
+                content: "\`}";
+            }
+        }
     }
 
     @include respond(br2) {
@@ -26,17 +38,10 @@
         padding-bottom: 3rem;
     }
 
-
-    & span {
-        &::before {
-            color:  $color-tertiary;
-            text-transform: none;
-            content: "${\`";
-        }
-        &::after {
-            color: $color-tertiary;
-            content: "\`}";
-        }
+    @include respond(br5) {
+        letter-spacing: 0;
+        font-size: 4.5rem;
+        padding-bottom: 3rem;
     }
 }
 
@@ -45,30 +50,20 @@
     font-weight: 800;
     font-size: 1.4rem;
 
-    // position: relative;
-    // &::before {
-    //     content: "";
-    //     position: absolute;
-    //     bottom: -2px;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 2px;
-    //     background-color: $color-tertiary;
-    // }
-
-    &::before {
-        color:  $color-grey-dark;
-        //text-transform: none;
-        content: "const motto = \"";
-    }
-    &::after {
-        color: $color-grey-dark;
-        content: "\";";
-    }
-    
     &--main {
         color:  $color-tertiary;
+
+        &::before {
+            color:  $color-grey-dark;
+            //text-transform: none;
+            content: "const motto = \"";
+        }
+        &::after {
+            color: $color-grey-dark;
+            content: "\";";
+        }
     }
+    
 }
 
 .heading-secondary {
@@ -78,7 +73,25 @@
     letter-spacing: .2rem;
     line-height: 1.2;
     padding-bottom: 2rem;
-    color: $color-grey-dark;
+
+    &--grey-dark {
+        color: $color-grey-dark;
+    }
+
+    @include respond(br2) {
+        letter-spacing: .1rem;
+        font-size: 2.8rem;
+    }
+
+    @include respond(br4) {
+        letter-spacing: 0;
+        font-size: 2.5rem;
+        padding-bottom: 1rem;
+    }
+
+    @include respond(br5) {
+        font-size: 2rem;
+    }
 }
 
 .paragraph {
