Created a second timeline design

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'components/nav';
 @import 'components/search';
 @import 'components/grid-item';
+@import 'components/timeline';
 
 @import 'layout/grid';
 @import 'layout/header';
