--- a/src/sass/components/_timeline.scss
+++ b/src/sass/components/_timeline.scss
@@ -1,3 +1,143 @@
 .timeline {
-    
+    width: 100rem;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+
+    @include respond(menuMax) {
+        width: 80rem;
+        padding: 0 5rem;
+    }
+
+    @include respond(br4) {
+        width: 100%;
+    }
+
+    @include respond(br5) {
+        padding: 0 1.5rem;
+    }
+
+    &__item {
+        display: grid;
+        grid-template-columns: 6fr 3rem 6fr;
+        column-gap: 3rem;
+        justify-items: center;
+
+        @include respond(menuMax) {
+            grid-template-columns: 3rem 12fr;
+        }
+
+        // &:last-of-type::before {
+        //     display: none;
+        // }
+
+        &::before {
+            content: "";
+            grid-area: 1 / 2 / 1 / 3;
+            width: .75rem;
+            height: 100%;
+
+            @include respond(menuMax) {
+                grid-area: 1 / 1 / 1 / 2;
+            }
+        }
+
+        &::after {
+            align-self: center;
+            content: "";
+            grid-area: 1 / 2 / 1 / 3;
+            width: 100%;
+            height: 0;
+            padding-bottom: 100%;
+            border-radius: 50%;
+
+            @include respond(menuMax) {
+                grid-area: 1 / 1 / 1 / 2;
+            }
+        }
+    }
+
+    &__container {
+        padding: 1rem 0;
+        position: relative;
+
+        @include respond(menuMax) {
+            padding: 2rem 0;
+        }
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 0;
+            height: 0;
+            // 1.5 <= mid col / 2
+            border-top: 1.5rem solid transparent;
+            border-bottom: 1.5rem solid transparent;
+        }
+    }
+
+    &__text-box {
+        padding: 2rem;
+        border-radius: .3rem;
+        -webkit-box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.1);
+        -moz-box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.1);
+    }
+
+    &__item:nth-child(even) &__container {
+        grid-column: 3 / 4;
+
+        &::before {
+            right: 100%;
+            border-right: 2rem solid currentColor;
+        }
+    }
+
+    &__item:nth-child(odd) &__container {
+        grid-column: 1 / 2;
+
+        &::before {
+            left: 100%;
+            border-left: 2rem solid currentColor;
+
+            @include respond(menuMax) {
+                border-left: unset;
+                left: unset;
+                right: 100%;
+                border-right: 2rem solid currentColor;
+            }
+        }
+    }
+
+    @include respond(menuMax) {
+        &__item &__container {
+            grid-column: 2 / 3 !important;
+        }
+    }
+}
+
+// Color class
+.color-section--primary .timeline {
+    color: $color-grey-dark;
+
+    &__item {
+        &::before {
+            background-color: #fff;
+        }
+        &::after {
+            background-color: $color-secondary;
+        }
+    }
+
+    &__text-box {
+        background-color: #fff;
+    }
+
+    &__container {
+        &::before {
+            color: $color-grey-light-2;
+        }
+    }
 }
