--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -24,6 +24,11 @@
             @content
         };
     }
+    @if $breakpoint == menuMax-2 {
+        @media only screen and (max-width: 51em){
+            @content
+        };
+    }
     @if $breakpoint == menuMin {
         @media only screen and (min-width: 67em){
             @content
