--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -60,7 +60,8 @@
             box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
 
              // Place scroll-bar on the right
-            overflow: scroll;
+            overflow-y: scroll;
+            overflow-x: hidden;
             max-height: calc(100vh - 5.5rem);
 
             padding: 0 5rem;
