Created profiles component (team section)

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
 @import 'components/search';
 @import 'components/grid-item';
 @import 'components/timeline';
+@import 'components/profiles';
 
 @import 'layout/grid';
 @import 'layout/header';
