--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,7 +2,6 @@
     width: 100%;
     padding: 10rem 0;
     
-    // v-padding but should be local
     @include respond(br4) {
         padding: 5rem 0;
     }
@@ -12,9 +11,26 @@
         height: auto;
 
         @include respond(br4) {
-            width: 50%;
-            min-width: 30rem;
+            max-width: 40rem;
             margin: 0 auto;
         }
     }
+
+    & .row,
+    & .grid {
+        height: 100%;
+    }
+
+    & .grid > * {
+        align-self: stretch;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        @include respond(br4) {
+            align-items: center;
+            text-align: center;
+        }
+    }
 }
+
