--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,8 +1,14 @@
 $color-primary: rgb(69, 90, 164);
 $color-secondary: rgb(123, 188, 232);
 $color-tertiary: rgb(237, 125, 38);
+
 $color-grey: rgb(90, 90, 90);
+
+$color-grey-footer: rgb(170, 170, 170);
+
 $color-grey-dark: rgb(60, 60, 60);
+$color-grey-dark-2: rgb(30, 30, 30);
+
 $color-grey-light-1: rgb(250, 250, 250);
 $color-grey-light-2: rgb(240, 240, 240);
 
