--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     padding-top: 10rem;
     padding-bottom: 5rem;
-    background-color: $color-grey-dark-2;
+    background-color: $color-primary;
 
     &__logo {
         width: 100%;
@@ -42,7 +42,7 @@
         width: 2.5rem;
         height: 2.5rem;
         margin-right: 1rem;
-        fill: #fff;
+        fill: $color-secondary;
     }
 
     &__link {
@@ -50,7 +50,8 @@
         &:active,
         &:focus,
         &:visited {
-            color: $color-grey-footer;
+            //color: $color-grey-footer;
+            color: #fff;
             text-decoration: none;
         }
 
@@ -61,11 +62,13 @@
     }
 
     &__text {
-        color: $color-grey-footer;
+        //color: $color-grey-footer;
+        color: #fff;
     }
 
     &__legal {
-        color: $color-grey-dark;
+        //color: $color-grey-dark;
+        color: #fff;
     }
 
     &__filler {
@@ -76,5 +79,31 @@
         &::before {
             content: " ";
         }
+    }
+
+    &__newsletter {
+        margin-bottom: .5rem;
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        width: 100%;
+    }
+
+    &__input {
+        outline-color: $color-secondary;
+        font-size: 1.8rem;
+        border: 0;
+        margin: 0;
+        flex: 1;
+    }
+
+    &__submit {
+        font-size: 1.8rem;
+        text-transform: uppercase;
+        margin: 0;
+        padding: .5rem 1rem;
+        border-radius: unset;
+        outline-color: #7bbce8;
+        border: 0;
     }
 }
