--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'components/grid-item';
 @import 'components/timeline';
 @import 'components/profiles';
+@import 'components/course';
 
 @import 'layout/grid';
 @import 'layout/header';
