--- a/src/sass/components/_grid-item.scss
+++ b/src/sass/components/_grid-item.scss
@@ -10,6 +10,10 @@
         justify-self: center;
         z-index: 20;
 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
         &--1 {
             background-color: $color-primary;
         }
@@ -21,6 +25,12 @@
         &--3 {
             background-color: $color-tertiary;
         }
+    }
+
+    &__icon {
+        width: 5rem;
+        height: 5rem;
+        fill: #fff;
     }
 
     &__text {
