--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $color-secondary: rgb(123, 188, 232);
 $color-tertiary: rgb(237, 125, 38);
 
 $color-grey: rgb(90, 90, 90);
+$color-grey-2: rgb(160, 160, 160);
 
 $color-grey-footer: rgb(170, 170, 170);
 
@@ -11,6 +12,7 @@ $color-grey-dark-2: rgb(30, 30, 30);
 
 $color-grey-light-1: rgb(250, 250, 250);
 $color-grey-light-2: rgb(240, 240, 240);
+$color-grey-light-3: rgb(200, 200, 200);
 
 $font-1: 'Nunito Sans', sans-serif;
 
